--- a/echoguide.html
+++ b/echoguide.html
@@ -165,7 +165,7 @@
 
   <h1>EchoGuide — Accessible Museum Companion</h1>
   <div class="meta">
-    Master exam project · UX & accessibility · Iterative prototyping
+    1st semester project · UX & accessibility · Iterative prototyping
   </div>
 
   <p class="hero-sub">
@@ -305,19 +305,61 @@
       </div>
 
       <figure>
-        <img src="images/echoguide-cover-placeholder.png" alt="EchoGuide cover and phone mockup">
+        <img src="images/EchoGuide/458966971_1215664716293786_2644768827638377206_n.jpg">
         <figcaption>
-          Placeholder for EchoGuide cover / app mockup showing the auditory companion concept.
+          Prototyping
         </figcaption>
       </figure>
 
       <figure>
-        <img src="images/echoguide-app-placeholder.png" alt="EchoGuide app UI with camera and audio feedback">
+        <img src="images/EchoGuide/458995292_1572846603659058_6608350325188313029_n.jpg">
         <figcaption>
-          Placeholder for screenshots of the EchoGuide app recognising exhibits and reading information aloud.
+         Prototyping
         </figcaption>
       </figure>
 
+ <figure>
+        <img src="images/EchoGuide/459072209_372531585919043_2461241725992375084_n.jpg">
+        <figcaption>
+         Prototyping
+        </figcaption>
+      </figure>
+
+      <figure>
+        <img src="images/EchoGuide/EchogUIDE (1).png">
+        <figcaption>
+         Frontpage
+        </figcaption>
+      </figure>
+
+<figure>
+        <img src="images/EchoGuide/echoguide storyboard.png">
+        <figcaption>
+         Storyboard
+        </figcaption>
+      </figure>
+
+<figure>
+        <img src="images/EchoGuide/echoguide mockup.png">
+        <figcaption>
+         Mockup
+        </figcaption>
+      </figure>
+
+<figure>
+        <img src="images/EchoGuide/echoguide mockup2.png">
+        <figcaption>
+         Mockup
+        </figcaption>
+      </figure>
+
+<figure>
+        <img src="images/EchoGuide/echoguide mockup 3.png">
+        <figcaption>
+         Mockup
+        </figcaption>
+      </figure>
+      
     </aside>
   </div>
 
