--- a/echoguide.html
+++ b/echoguide.html
@@ -359,7 +359,7 @@
 
       <div class="side-card">
         <h3>Project snapshot</h3>
-        <p><strong>Type:</strong> Master exam project</p>
+        <p><strong>Type:</strong> 1st semester project</p>
         <p><strong>Programme:</strong> Cand.IT Digital Transformation</p>
         <p><strong>Case:</strong> Digital information for the Viking Ship Museum, Roskilde</p>
         <p><strong>Focus:</strong> Accessibility, universal design, audio interaction</p>
