--- a/knowable.html
+++ b/knowable.html
@@ -359,27 +359,23 @@
       <figure class="carousel" aria-label="Screenshots from the Knowable prototype">
         <div class="carousel-inner">
           <div class="carousel-slide active">
-            <img src="images/knowable/knowable-dashboard.png" alt="Overview dashboard of Knowable prototype">
+            <img src="images/Knowable/KnowableWebsideProto.png">
             <figcaption>
-              Overview dashboard combining sentiment gauge, wordcloud, topics and most common reviews.
             </figcaption>
           </div>
           <div class="carousel-slide">
-            <img src="images/knowable/knowable-eurodan.png" alt="Knowable analysis for Eurodan-huse">
+            <img src="images/Knowable/KnowableDatabase.png">
             <figcaption>
-              Example analysis of a house builder, showing mostly neutral sentiment despite a high TrustScore.
             </figcaption>
           </div>
           <div class="carousel-slide">
-            <img src="images/knowable/knowable-sushimania.png" alt="Knowable analysis for Sushimania">
+            <img src="images/Knowable/KnowableCSS-elementer.png">
             <figcaption>
-              Restaurant case where negative written sentiment contrasts with an average star rating.
             </figcaption>
           </div>
           <div class="carousel-slide">
-            <img src="images/knowable/knowable-momkind.png" alt="Knowable analysis for Momkind">
+            <img src="images/Knowable/KnowableAnalysepage.png">
             <figcaption>
-              Positive sentiment and topics around fast delivery and products for new mothers.
             </figcaption>
           </div>
         </div>
