--- a/brondby.html
+++ b/brondby.html
@@ -234,7 +234,7 @@
     Using detailed event data from the Danish Superliga and international leagues,
     this project builds Expected Goals (xG) models, clustering analyses and large
     descriptive overviews to understand Brøndby IF’s shot quality, patterns of play
-    and how men’s and women’s football differ in style and tactics.:contentReference[oaicite:0]{index=0}
+    and how men’s and women’s football differ in style and tactics.
   </p>
 
   <div>
@@ -264,7 +264,7 @@
         <p>
           The work combines several assignments into one analytical storyline: xG models
           for Brøndby and three synthetic leagues, clustering of passes and players, and
-          descriptive comparisons of men’s and women’s football using StatsBomb data.:contentReference[oaicite:1]{index=1}
+          descriptive comparisons of men’s and women’s football using StatsBomb data.
         </p>
       </div>
 
@@ -305,7 +305,7 @@
           We first built a classification tree to keep the logic explainable, and then
           compared it to a random forest model which uses many trees in parallel. The
           random forest achieved higher accuracy and highlighted which variables were
-          most important (location and distance dominating, with some effect of formation).:contentReference[oaicite:2]{index=2}
+          most important (location and distance dominating, with some effect of formation).
         </p>
       </div>
 
@@ -316,7 +316,7 @@
           To avoid over- or underestimating goal probability in a single league, we
           combined “bottom”, “mid” and “top” synthetic leagues into one 3,000-shot
           dataset and built a second xG model. This allowed us to compare how shot
-          quality and conversion change across different competitive levels.:contentReference[oaicite:3]{index=3}
+          quality and conversion change across different competitive levels.
         </p>
 
         <h3>Clustering passes & players</h3>
@@ -336,7 +336,7 @@
         </ul>
         <p>
           These models made it possible to talk about “player types” and typical patterns
-          instead of just isolated statistics.:contentReference[oaicite:4]{index=4}
+          instead of just isolated statistics.
         </p>
       </div>
 
@@ -347,7 +347,7 @@
           a large StatsBomb dataset. We looked at differences in passing length, shot
           types, formations and event distributions, and analysed “freeze-frames” to see
           how many team-mates and opponents were between shooter and goal at the
-          moment of a shot.:contentReference[oaicite:5]{index=5}
+          moment of a shot.
         </p>
         <p>
           The analysis challenged stereotypes about women’s football being “less
@@ -389,37 +389,19 @@
 
       <div class="carousel" data-carousel>
         <figure class="active">
-          <img src="images/brondby/xg_pitchmap.png" alt="xG shot map on a football pitch">
+          <img src="images/Brondby/BrondbyOpgMålpos.png">
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <img src="images/Brondby/BrondbyKvinder.png">
           <figcaption>
-            Example xG pitch map showing where successful and unsuccessful shots are taken.
           </figcaption>
         </figure>
 
         <figure>
-          <img src="images/brondby/random_forest_importance.png" alt="Random forest variable importance plot">
+          <img src="images/Brondby/BrondbyHerrer.png">
           <figcaption>
-            Variable importance from the random forest model – location and distance dominate.
-          </figcaption>
-        </figure>
-
-        <figure>
-          <img src="images/brondby/cluster_shots.png" alt="Cluster plot of shot locations">
-          <figcaption>
-            Clustering of Superliga shots into groups with different locations and goal probabilities.
-          </figcaption>
-        </figure>
-
-        <figure>
-          <img src="images/brondby/cluster_players.png" alt="Cluster plot of player profiles">
-          <figcaption>
-            Player clusters based on average shot and passing profiles – useful for replacement scouting.
-          </figcaption>
-        </figure>
-
-        <figure>
-          <img src="images/brondby/gender_events_comparison.png" alt="Comparison chart of men and women match events">
-          <figcaption>
-            Comparison of key match events in men’s and women’s football based on StatsBomb data.
           </figcaption>
         </figure>
 
