--- a/index.html
+++ b/index.html
@@ -766,6 +766,14 @@
           </p>
         </div>
       </article>
+
+ <article class="timeline-item">
+   <p>
+            For a more detailed CV, don't hesitate reaching out!
+          </p>
+        </div>
+      </article>
+      
     </div>
   </section>
 
