--- a/index.html
+++ b/index.html
@@ -767,14 +767,9 @@
         </div>
       </article>
 
- <article class="timeline-item">
-   <p>
-            For a more detailed CV, don't hesitate reaching out!
+ <p class="section-intro">
+            If you’d like a more detailed CV or have any questions, I’d be happy to hear from you.
           </p>
-        </div>
-      </article>
-      
-    </div>
   </section>
 
   <!-- CONTACT -->
