--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
       <!-- Documentary (2015) -->
       <article class="project" data-category="ux critical" data-year="2015" data-month="6">
         <div class="project-media">
-          <img src="images/other/documentary-placeholder.jpg"
+          <img src="images/dokumentar/Skærmbillede 2026-01-27 221550.png"
                alt="Still from documentary At liva við tí" />
         </div>
 
