--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
       <!-- Workshop (2025) -->
       <article class="project" data-category="ux critical" data-year="2025" data-month="7">
         <div class="project-media">
-          <img src="images/other/workshop-placeholder.jpg"
+          <img src="images/solsikke/workshop/7RV00140 (1).jpg"
                alt="Sensory workshop at Roskilde Festival" />
         </div>
 
@@ -725,7 +725,7 @@
       </article>
 
       <!-- Puzzle (Winter 2025) -->
-      <article class="project" data-category="ux" data-year="2025" data-month="1">
+      <article class="project" data-category="ux" data-year="2025" data-month="11">
         <div class="project-media">
           <img src="images/other/puzzle-placeholder.jpg"
                alt="Faroese children’s puzzle" />
