--- a/sunflower.html
+++ b/sunflower.html
@@ -347,6 +347,11 @@ footer{
   <p><strong>Programme:</strong> Cand.IT Digital Transformation / Design</p>
   <p><strong>Focus:</strong> Stigma, visibility, critical interventions</p>
   <p><strong>My role:</strong> Technical & analytical lead</p>
+     <p style="margin-top:10px;">
+          <a class="cta" href="https://heidiroadottir.github.io/portfolio/workshop.html" target="_blank" rel="noopener">
+            RF25 Workshop →
+          </a>
+        </p>
 </div>
 
 <!-- BOXED STIGMA CAROUSEL -->
